It's finish, I just have finished this website and i'ts great :)

--- a/entomof.html
+++ b/entomof.html
@@ -88,7 +88,8 @@
             <div class="korzina-content bg-bgflex rounded-lg w-fit max-h-fit relative py-[2%] px-[3%]">
                 <div class="main-korzina flex justify-between items-center">
                     <h2 class="text-5xl md:text-[32px] leading-[57px]">Корзина</h2>
-                    <div class="cursor-pointer md:w-[30px]"><img src="img/main/m-close.png" alt="close-img" id="closeModal">
+                    <div class="cursor-pointer md:w-[30px]"><img src="img/main/m-close.png" alt="close-img"
+                            id="closeModal">
                     </div>
                 </div>
                 <div
@@ -499,7 +500,10 @@
                 <h1>Эффективная защита</h1>
                 <h4>Трихограмма</h4>
             </div>
-            <p class="pr-[260px] md:pr-0 text-lg md:text-base sm:text-sm my-7">Трихограмма — мелкое насекомое, которое
+            <p class="pr-[260px] md:pr-0 text-lg md:text-base sm:text-sm mt-7 md:mb-[41%] ss:mb-[45%]">Трихограмма —
+                мелкое
+                насекомое,
+                которое
                 будучи
                 личинкой, питается
                 яйцами паразитов. Современные комплексы БПЛА (дроны) могут использоваться не только для сбора
@@ -508,7 +512,7 @@
                 других чешуекрылых вредителей. Она паразитирует на яйцах более 70 видов вредителей.</p>
 
             <div class="trixo-bg"></div>
-            <div class="trixogram-box relative flex md:flex-col md:justify-center mt-[70px] md:mt-[219px]">
+            <div class="trixogram-box relative flex md:flex-col md:justify-center mt-[70px]">
                 <div class="trixo-img">
                     <img src="img/entomofagi/trixogram-img.png" alt="trixo-img">
                 </div>
@@ -567,11 +571,13 @@
                 <h1>Премениние златоглазки</h1>
                 <h4>Златоглазка</h4>
             </div>
-            <p class="pr-[260px] md:pr-0 text-lg md:text-base sm:text-sm my-7">Каждая личинка златоглазки за жизнь
+            <p class="pr-[260px] md:pr-0 text-lg md:text-base sm:text-sm mt-7 md:mb-[35%] sm:mb-[44%]">Каждая личинка
+                златоглазки за
+                жизнь
                 способна уничтожить до 400 особей тли, более 2000 паутинных клещей, порядка 300 яиц колорадского жука,
                 так же златоглазка пожирает гусениц первого возраста стеблевого мотылька, моли.</p>
             <div class="zlato-bg"></div>
-            <div class="zlato-box relative flex md:flex-col md:justify-center mt-[70px] md:mt-[219px]">
+            <div class="zlato-box relative flex md:flex-col md:justify-center">
                 <div class="zlato-item flex flex-col justify-start md:mt-[auto]">
                     <div class="trixo-text text-lg md:text-base max-w-[620px] md:max-w-[auto]">
                         <p>При своевременном внесении и соблюдении всех технологических процессов при производстве и
@@ -634,14 +640,15 @@
                 <h1>Эффективная защита</h1>
                 <h4>Трихограмма</h4>
             </div>
-            <p class="pr-[260px] md:pr-0 text-lg md:text-base sm:text-sm my-7">Габробракон — это насекомое способно
+            <p class="pr-[260px] md:pr-0 text-lg md:text-base sm:text-sm mt-7 md:mb-[41%] ss:mb-[45%]">Габробракон — это
+                насекомое способно
                 защитить поля от более 60 видов вредителей, включая самых опасных для посевов мотыльков, плодожорок и
                 огневок. Особенно
                 эффективно габробракон работает на злаковых культурах, сое, плодовых деревьях и виноградниках.
             </p>
 
             <div class="gabro-bg"></div>
-            <div class="trixogram-box relative flex md:flex-col md:justify-center mt-[70px] md:mt-[219px]">
+            <div class="trixogram-box relative flex md:flex-col md:justify-center mt-[70px]">
                 <div class="trixo-img">
                     <img src="img/entomofagi/gabro-img.png" alt="gabro-img">
                 </div>
