--- a/index.html
+++ b/index.html
@@ -389,9 +389,10 @@
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="p-item box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
+                        <div
+                            class="p-item ss:w-auto sm:w-[74%] box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
                             <a href="./product1.html"
-                                class="p-img mx-6 sm:mx-0 mt-4 max-w-[310px] sm:max-w-[218px]"><img
+                                class="p-img mx-6 ss:mx-auto mt-4 max-w-[310px] ss:w-[70%] ss:block"><img
                                     src="img/main/product-d1.png" alt="Dron1">
                             </a>
                             <div class="p-info ml-10 sm:ml-5">
@@ -403,16 +404,17 @@
                                 </div>
                                 <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$15001.27
                                 </div>
-                                <a href="./product1.html"
-                                    class="p-shopping border block mx-auto px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
-                                    в корзину</a>
                             </div>
+                            <a href="./product1.html"
+                                class="p-shopping border block w-fit mx-auto px-8 pt-4 pb-5 mb-10 sm:mb-8 text-2xl sm:text-[17px] leading-4 sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                в корзину</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="p-item box-border text-white bg-bgflex mb-5 sm:mb-0 rounded-lg transition-[0.4s]">
+                        <div
+                            class="p-item ss:w-auto sm:w-[74%] box-border text-white bg-bgflex mb-5 sm:mb-0 rounded-lg transition-[0.4s]">
                             <a href="./product2.html"
-                                class="p-img mx-6 sm:mx-0  mt-4 max-w-[310px] sm:max-w-[218px]"><img
+                                class="p-img mx-6 ss:mx-auto mt-4 max-w-[310px] ss:w-[70%] ss:block"><img
                                     src="img/main/product-d2.png" alt="Dron1">
                             </a>
                             <div class="p-info ml-10 sm:ml-5">
@@ -425,15 +427,16 @@
                                 <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$18206.30
                                 </div>
                                 <a href="./product2.html"
-                                    class="p-shopping border block mx-auto px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                    class="p-shopping border block w-fit mx-auto px-8 pt-4 pb-5 mb-10 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
                                     в корзину</a>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="p-item box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
+                        <div
+                            class="p-item ss:w-auto sm:w-[74%] box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
                             <a href="./product3.html"
-                                class="p-img mx-6 sm:mx-0 mt-4 max-w-[310px] sm:max-w-[218px]"><img
+                                class="p-img mx-6 ss:mx-auto mt-4 max-w-[310px] ss:w-[70%] ss:block"><img
                                     src="img/main/product-d3.png" alt="Dron1">
                             </a>
                             <div class="p-info ml-10 sm:ml-5">
@@ -446,7 +449,7 @@
                                 <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$13802.86
                                 </div>
                                 <a href="./product3.html"
-                                    class="p-shopping border px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8  text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                    class="p-shopping border block w-fit mx-auto px-8 pt-4 pb-5 mb-10 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
                                     в корзину</a>
                             </div>
                         </div>
