--- a/spraying.html
+++ b/spraying.html
@@ -89,7 +89,8 @@
             <div class="korzina-content bg-bgflex rounded-lg w-fit max-h-fit relative py-[2%] px-[3%]">
                 <div class="main-korzina flex justify-between items-center">
                     <h2 class="text-5xl md:text-[32px] leading-[57px]">Корзина</h2>
-                    <div class="cursor-pointer md:w-[30px]"><img src="img/main/m-close.png" alt="close-img" id="closeModal">
+                    <div class="cursor-pointer md:w-[30px]"><img src="img/main/m-close.png" alt="close-img"
+                            id="closeModal">
                     </div>
                 </div>
                 <div
@@ -877,9 +878,9 @@
                             <div class="drob-img mx-auto"><img class="object-cover" src="img/spraying/drobline1.png"
                                     alt="drobline1"></div>
                             <div
-                                class="drob-name text-[34px] ss:text-[26px] leading-8 ml-7 ss:ml-3 mt-14 ss:mt-6 mb-10 ss:mb-6">
+                                class="drob-name text-[34px] ss:text-[26px] leading-8 ml-7 ss:ml-3 sm:ml-0 mt-14 ss:mt-6 mb-10 ss:mb-6">
                                 Стандартная форсунка:</div>
-                            <div class="drob-info ml-7 ss:ml-3">
+                            <div class="drob-info ml-7 ss:ml-3 sm:ml-0 ">
                                 <div class="flex mb-5 ss:mb-1">
                                     <div class="close-img mr-[14px]"><svg width="26" height="26" viewBox="0 0 26 26"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -916,9 +917,9 @@
                             <div class="drob-img mx-auto"><img class="object-cover" src="img/spraying/drobline2.png"
                                     alt="drobline2"></div>
                             <div
-                                class="drob-name text-[34px] ss:text-[26px] leading-8 ml-7 ss:ml-3 mt-14 ss:mt-6 mb-10 ss:mb-6">
+                                class="drob-name text-[34px] ss:text-[26px] leading-8 ml-7 ss:ml-3 sm:ml-0  mt-14 ss:mt-6 mb-10 ss:mb-6">
                                 Форсунка УМО</div>
-                            <div class="drob-info ml-7">
+                            <div class="drob-info ml-7 sm:ml-0 ">
                                 <div class="flex mb-5">
                                     <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
