--- a/product3.html
+++ b/product3.html
@@ -89,7 +89,8 @@
             <div class="korzina-content bg-bgflex rounded-lg w-fit max-h-fit relative py-[2%] px-[3%]">
                 <div class="main-korzina flex justify-between items-center">
                     <h2 class="text-5xl md:text-[32px] leading-[57px]">Корзина</h2>
-                    <div class="cursor-pointer md:w-[30px]"><img src="img/main/m-close.png" alt="close-img" id="closeModal">
+                    <div class="cursor-pointer md:w-[30px]"><img src="img/main/m-close.png" alt="close-img"
+                            id="closeModal">
                     </div>
                 </div>
                 <div
@@ -211,12 +212,12 @@
                     <div class="line absolute w-[105px] bg-bgline h-[1px] mt-2"></div>
                     <div class="counter flex items-center mt-10 ss:mt-6 mb-12 ss:mb-8">
                         <div class="text-[30px] ss:text-2xl leading-[30px] mr-[6px]">$</div>
-                        <div id="counter-price_one" class="text-[30px] ss:text-2xl leading-[30px] mr-10"></div>
+                        <div id="counter-price_ones" class="text-[30px] ss:text-2xl leading-[30px] mr-10"></div>
                         <div
                             class="counter-count border flex border-borderdrone gap-4 px-3 py-[2px] text-[34px] leading-[26px]">
-                            <button id="minus">-</button>
-                            <div class="count text-2xl ss:text-xl leading-6"></div>
-                            <button id="plus">+</button>
+                            <button id="minuss">-</button>
+                            <div class="counts text-2xl ss:text-xl leading-6"></div>
+                            <button id="pluss">+</button>
                         </div>
                     </div>
                     <div class="drone-buttons flex gap-5 sm:gap-3">
@@ -590,7 +591,7 @@
                             </div>
                             <div class="p-price text-3xl xl:text-2xl leading-7 mb-12">$15001.27</div>
                             <button
-                                class="p-shopping mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                                class="p-shopping w-fit mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
                                 в корзину</button>
                         </div>
                     </div>
@@ -610,7 +611,7 @@
                             </div>
                             <div class="p-price text-3xl xl:text-2xl leading-7 mb-12">$18206.30</div>
                             <button
-                                class="p-shopping mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                                class="p-shopping w-fit mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
                                 в корзину</button>
                         </div>
                     </div>
@@ -631,7 +632,7 @@
                             </div>
                             <div class="p-price text-3xl xl:text-2xl leading-7 mb-12">$13802.86</div>
                             <button
-                                class="p-shopping mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                                class="p-shopping w-fit mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
                                 в корзину</button>
                         </div>
                     </div>
